# UR5-controller

./: CMakeLists.txt  README.md  package.xml  setup.py  universal_robot_kinematics.py
launch/: API_demo.launch  motion1_demo.launch  motion2_demo.launch  ur5_sin_wave.launch
scripts/: API_LLM.py  API_demo.py  cartesian.py  motion1_test.py  motion2_test.py  motion_library.py
scripts/API/: robot_API.py
scripts/motion_library/: ur5_motion_library.py
scripts/ur5_motion_library/: ur5_motion_library.py
src/: API_LLM.py  API_demo.py  motion1_test.py  motion2_test.py  sin_wave_publisher.py
src/motion_library/: ur5_motion_library.py
